--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/api/:path*",
-      "destination": "https://your-production-backend.com/:path*"
+      "destination": "https://taskflow-backend-wvwa.onrender.com/:path*"
     }
   ]
 }
